--- a/package.json
+++ b/package.json
@@ -1,6 +1,54 @@
 {
-  "name": "softledger-table",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+  "name": "@softledger/sl-table",
+  "version": "0.1.0",
+  "author": "Geoff Ostrega <geoff.ostrega@softledger.com>",
+  "license": "MIT",
+  "description": "SoftLedger re-usable UI Components",
+  "main": "dist/index.js",
+  "scripts": {
+    "clean-dist": "rm -rf ./dist",
+    "build": "yarn run clean-dist && NODE_ENV=production `yarn bin`/babel ./src --out-dir ./dist && cp ./src/*.css ./dist",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
+  },
+  "peerDependencies": {
+    "bootstrap": "^4.0.0",
+    "lodash": "~4.17.5",
+    "prop-types": "~15.6.0",
+    "react": "~16.2.0",
+    "react-table": "^6.8.0",
+    "reactstrap": "~5.0.0"
+  },
+  "devDependencies": {
+    "@dump247/storybook-state": "^1.3.0",
+    "@storybook/addon-actions": "^3.3.15",
+    "@storybook/addon-links": "^3.3.15",
+    "@storybook/addons": "^3.3.15",
+    "@storybook/react": "^3.3.15",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-runtime": "^6.26.0",
+    "bootstrap": "^4.0.0",
+    "css-loader": "^0.28.11",
+    "lodash": "^4.17.5",
+    "node-sass": "^4.8.3",
+    "postcss-loader": "^2.1.3",
+    "prop-types": "~15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-table": "^6.8.0",
+    "reactstrap": "^5.0.0",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.5",
+    "@fortawesome/fontawesome-free-solid": "^5.0.9",
+    "@softledger/components": "^0.1.6",
+    "immutability-helper": "^2.6.6"
+  }
 }
