--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
   "main": "dist/index.js",
   "scripts": {
     "clean-dist": "rm -rf ./dist",
-    "build": "yarn run clean-dist && NODE_ENV=production `yarn bin`/babel ./src --out-dir ./dist && cp ./src/*.css ./dist",
+    "build": "yarn run clean-dist && NODE_ENV=production `yarn bin`/babel ./src --out-dir ./dist && cp ./src/*.scss ./dist && yarn docs",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "docs": "node ./buildMarkdown.js",
+    "deploy-storybook": "storybook-to-ghpages"
   },
   "peerDependencies": {
-    "bootstrap": "^4.0.0",
     "lodash": "~4.17.5",
+    "moment": "^2.21.0",
     "prop-types": "~15.6.0",
     "react": "~16.2.0",
-    "react-table": "^6.8.0",
     "reactstrap": "~5.0.0"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@storybook/addon-links": "^3.3.15",
     "@storybook/addons": "^3.3.15",
     "@storybook/react": "^3.3.15",
+    "@storybook/storybook-deployer": "^2.3.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
@@ -39,6 +41,7 @@
     "postcss-loader": "^2.1.3",
     "prop-types": "~15.6.0",
     "react": "^16.2.0",
+    "react-docgen-markdown-renderer": "^1.0.2",
     "react-dom": "^16.2.0",
     "react-table": "^6.8.0",
     "reactstrap": "^5.0.0",
@@ -48,7 +51,10 @@
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.5",
     "@fortawesome/fontawesome-free-solid": "^5.0.9",
-    "@softledger/components": "^0.1.8",
-    "immutability-helper": "^2.6.6"
+    "@softledger/components": "~0",
+    "@softledger/form-components": "^0.2.2",
+    "bootstrap": "^4.0.0",
+    "immutability-helper": "^2.6.6",
+    "react-table": "^6.8.0"
   }
 }
