--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@softledger/sl-table",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "author": "Geoff Ostrega <geoff.ostrega@softledger.com>",
   "license": "MIT",
   "description": "SoftLedger re-usable UI Components",
@@ -52,7 +52,7 @@
     "@fortawesome/fontawesome": "^1.1.5",
     "@fortawesome/fontawesome-free-solid": "^5.0.9",
     "@softledger/components": "~0",
-    "@softledger/form-components": "~0",
+    "@softledger/form-components": "^0.2.4",
     "bootstrap": "^4.0.0",
     "immutability-helper": "^2.6.6",
     "react-table": "^6.8.0"
